<resources>
    <string name="app_name">Cl\'sroom</string>
    <string name="authenticationFailed">Authentication failed…</string>
    <string name="please_try_again">Please Try again!</string>
    <string name="noInternet">No Internet…</string>
    <string name="signing_in">Signing in…</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="userId">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notes_management">Notes Management</string>
    <string name="attendance_management">Student Management</string>
    <string name="time_table_management">Staff Management</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_staff_main">StaffMainActivity</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="staff">Staff</string>
    <string name="classes">Classes</string>
    <string name="standards">Standards</string>
    <string name="logout">Logout</string>
    <string name="subjects">Subjects</string>
    <string name="timeTable">Time Table</string>
    <string name="calender">Calender</string>
    <string name="attendance">Attendance</string>
    <string name="leaves">Leaves</string>
    <string name="assignments">Assignments</string>
    <string name="results">Results</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="accounts">Account</string>
    <string name="timetables">Time Tables</string>
    <string name="notifications">Notifications</string>
    <string name="timetable">Time table</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="noStudentsFound">No Students Found</string>
    <string name="noStaffFound">No Staff Found</string>
    <string name="admin">Admin</string>
    <string name="studentCount">Student Count</string>
    <string name="classTeacher">Class Teacher</string>
    <string name="delete">Delete</string>
    <string name="addNewStaff">Add New Staff</string>
    <string name="viewAttendance">View Attendance</string>
    <string name="addClasses">Add Classes</string>
    <string name="className">Class Name</string>
    <string name="save">Save</string>
    <string name="classCode">Class Code</string>
    <string name="please_enter_class_name">Please Enter Class Name</string>
    <string name="please_enter_class_code">Please Enter Class Code</string>
    <string name="saved">Saved</string>
    <string name="edit">Edit</string>
    <string name="deleted">Deleted</string>
    <string name="noClassesFound">No Classes Found</string>
    <string name="name">Name</string>
    <string name="fullName">Full Name</string>
    <string name="staffId">Staff Id</string>
    <string name="designation">Designation</string>
    <string name="qualification">Qualification</string>
    <string name="editClass">Edit Class</string>
    <string name="addClass">Add Class</string>
    <string name="please_enter_staff_name">Please Enter Staff Name</string>
    <string name="please_enter_staff_id">Please Enter Staff ID</string>
    <string name="please_enter_staff_qualification">Please Enter Staff Qualification</string>
    <string name="please_enter_staff_designation">Please Enter Staff Designation</string>
    <string name="editStaff">Edit Staff</string>
    <string name="numberOfStudent">Number of Student</string>
    <string name="classText">Class</string>
    <string name="addStudents">Add Students</string>
    <string name="add">Add</string>
    <string name="please_select_class">Please Select Class</string>
    <string name="please_enter_no_of_students">Please Enter Number Of Students</string>
    <string name="added">Added…</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="profilePicture">Profile Picture</string>
    <string name="selectAll">Select All</string>
    <string name="deSelectAll">Deselect All</string>
    <string name="noAbsentees">No Absentees..</string>
    <string name="pleaseSelectClassTeacher">Please Select Class Teacher…</string>
    <string name="deleting">Deleting…</string>
    <string name="saving">Saving…</string>
    <string name="couldntUpdateStudentCount">Couldn\'t Update Student Count</string>
    <string name="adding">Adding…</string>
    <string name="couldntAddStudents">Couldn\'t Add Students</string>
    <string name="loading">Loading…</string>
    <string name="couldntLoadTheList">Couldn\'t Load The List..</string>
    <string name="loginFailed">Login Failed!</string>
    <string name="validUserIdErrMsg">Please Enter a valid user ID</string>
    <string name="validPasswordErrMsg">Please Enter a valid password</string>
    <string name="getStarted">Get Started</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="noLeavesFound">No Leaves Found</string>
    <string name="requested">Requested Leaves</string>
    <string name="staffLeaves">Staff Leaves</string>
    <string name="studentsLeaves">Students Leaves</string>
    <string name="myLeaves">My Leaves</string>
    <string name="subjectName">Subject Name</string>
    <string name="teacher">Teacher</string>
    <string name="addAnother">Add Another</string>
    <string name="subjectCode">Subject Code</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="notes">Notes</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="phoneNo">Phone No.</string>
    <string name="address">Address</string>
    <string name="forgotPassword">Forgot Password?</string>
</resources>