<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_classes"
            android:icon="@mipmap/classes"
            android:orderInCategory="1"
            android:title="@string/classes"/>
        <item
            android:id="@+id/launch_subjects_fragment"
            android:icon="@mipmap/subjects"
            android:orderInCategory="1"
            android:title="@string/subjects"/>
        <item
            android:id="@+id/launch_notes_fragment"
            android:icon="@mipmap/notebook"
            android:orderInCategory="2"
            android:title="@string/notes"/>
        <item
            android:id="@+id/admin_students"
            android:icon="@mipmap/student"
            android:orderInCategory="3"
            android:title="@string/students"/>
        <item
            android:id="@+id/admin_staff"
            android:icon="@mipmap/staff"
            android:orderInCategory="4"
            android:title="@string/staff"/>
        <item
            android:id="@+id/launch_leaves_fragment"
            android:icon="@mipmap/calendar"
            android:orderInCategory="5"
            android:title="@string/leaves"/>
        <item
            android:id="@+id/launch_time_table_fragment"
            android:icon="@mipmap/timetable"
            android:orderInCategory="6"
            android:title="@string/timetables"/>
        <!--<item-->
        <!--android:id="@+id/admin_results"-->
        <!--android:icon="@mipmap/results"-->
        <!--android:orderInCategory="6"-->
        <!--android:title="@string/results"/>-->
    </group>

    <item
        android:orderInCategory="7"
        android:title="@string/accounts">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notifications_black_48dp"
                    android:title="@string/notifications"/>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/profile_settings"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@mipmap/logout"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>

</menu>
