<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/launch_notes_fragment"
            android:icon="@mipmap/notebook"
            android:title="@string/notes"/>
        <item
            android:id="@+id/launch_subjects_fragment"
            android:icon="@mipmap/subjects"
            android:title="@string/subjects"/>
        <!--<item-->
        <!--android:id="@+id/stu_assignments"-->
        <!--android:icon="@mipmap/assignment"-->
        <!--android:title="@string/assignments"/>-->
        <item
            android:id="@+id/launch_leaves_fragment"
            android:icon="@mipmap/calendar"
            android:title="@string/leaves"/>
        <item
            android:id="@+id/launch_time_table_fragment"
            android:icon="@mipmap/timetable"
            android:title="@string/timetable"/>
        <!--<item-->
        <!--android:id="@+id/stu_results"-->
        <!--android:icon="@mipmap/results"-->
        <!--android:title="@string/results"/>-->
    </group>

    <item android:title="@string/accounts">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notifications_black_48dp"
                    android:title="@string/notifications"/>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/profile_settings"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@mipmap/logout"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>

</menu>
