<LinearLayout
    android:id="@+id/scrollViewChild"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialogItemPadding"
        android:padding="@dimen/dialogItemPadding">

        <EditText
            android:id="@+id/subjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjectName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialogItemPadding"
        android:padding="@dimen/dialogItemPadding">

        <EditText
            android:id="@+id/subjectCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjectCode"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialogItemPadding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacherContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialogItemPadding">

            <EditText
                android:id="@+id/teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/teacherSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/teacherContainer"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="-16dp"
            />
    </RelativeLayout>

    <Switch
        android:id="@+id/addAnother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/switchMargin"
        android:padding="@dimen/switchPadding"
        android:text="@string/addAnother"
        />
</LinearLayout>
